<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_daftar_up"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Fragment_Awal.Daftar_Up">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/backStack"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/gambar_back" />

        <com.google.android.material.textview.MaterialTextView
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/backStack"
            android:fontFamily="cursive"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"

            android:textSize="30sp" />


        <ImageView
            android:layout_alignParentRight="true"
            android:id="@+id/imageQuestion2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_question"
            android:layout_marginStart="150dp"
            android:layout_marginTop="5dp" />

    </RelativeLayout>

    <ScrollView
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >


            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="88dp"
                        android:layout_height="115dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/ic_add_group" />

                    <com.google.android.material.textfield.TextInputLayout
                        app:endIconMode="clear_text"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/textFullname"
                        android:hint="@string/fullname"
                        android:layout_gravity="center"
                        android:background="@drawable/input_teks"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:textColor="@android:color/black"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        app:endIconMode="clear_text"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/userName"
                        android:hint="Username"
                        android:layout_gravity="center"
                        android:background="@drawable/input_teks"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:textColor="@android:color/black"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_account_circle_black_24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        app:endIconMode="clear_text"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/email_id"
                        android:id="@+id/emailSatu"
                        android:layout_gravity="center"
                        android:background="@drawable/input_teks"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:counterEnabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:textColor="@android:color/black"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_email_black_24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/textPhone"
                        android:hint="@string/telephone"
                        app:endIconMode="clear_text"
                        android:layout_gravity="center"
                        android:background="@drawable/input_teks"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:textColor="@android:color/black"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_phone_black_24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/password1"
                        android:hint="@string/password"
                        app:passwordToggleEnabled="true"
                        android:layout_gravity="center"
                        android:background="@drawable/input_teks"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:textColor="@android:color/black"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/password2"
                        android:hint="@string/confirm_password"
                        app:passwordToggleEnabled="true"
                        android:layout_gravity="center"
                        android:background="@drawable/input_teks"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:textColor="@android:color/black"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ProgressBar
                        android:id="@+id/proses1"
                        android:visibility="gone"
                        android:theme="@style/ProgerssBar"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:progressDrawable="@drawable/ic_loader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:enabled="true"
                        android:visibility="visible"
                        android:id="@+id/btn_daftar"
                        android:textSize="20sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginBottom="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background_button"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:text="@string/daftar" />

                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/atau"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/btn_login"
                        android:textSize="20sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginBottom="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/sudah_memiliki_akun" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </ScrollView>


</LinearLayout>